# osrs-ge-prices

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
dashboard/: app.py  data_loader.py
data/: database.py  grand_exchange_api.py  osrs_ge.sqlite  preprocess.py
grandexchange/: database.py  preprocess.py  wiki_api.py
notebooks/: analysis.ipynb  model.ipynb  setup_notebook.py
