[tool.poetry]
name = "osrs-ge-prices"
version = "0.1.0"
description = ""
authors = ["jdidcote <joshua.didcote@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
