[tool.poetry]
name = "osrs-ge-prices"
version = "0.1.0"
description = ""
authors = ["joshdidcote <joshua.didcote@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.3"
pandas = "^1.5.0"
seaborn = "^0.12.0"
matplotlib = "^3.6.0"
scikit-learn = "^1.1.2"
scipy = "1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
